# PCL_learning

./: .gitignore  work.md
src/chapter00/: CMakeLists.txt  package.xml
src/chapter00/output/: mid360.pcd
src/chapter00/pcd/: car_mid360_2.csv  mid_360.ply  pyramid.pcd
src/chapter00/src/: create_point_color.cpp  csv2pcd.cpp  pcd2ply.cpp  point_convert.cpp  txt2pcd.cpp
src/chapter01/: CMakeLists.txt  README.md  package.xml
src/chapter01/pcd/: convert.pcd  ism_test_wolf.txt  mid_360.STL  pyramid_color.pcd
src/chapter01/src/: common.cpp  create_point.cpp  pcd2ply_wange.cpp  pcd2txt.cpp  ply2stl.cpp  point_convert.cpp  stl2ply.cpp
src/chapter02/: CMakeLists.txt  package.xml
src/chapter02/pcd/: test.pcd
src/chapter02/src/: kdtree.cpp
src/chapter03/: CMakeLists.txt  README.md  package.xml
src/chapter03/src/: pcd2octree.cpp  pcl_visual.cpp  point_cloud_compression.cpp
src/chapter04/: CMakeLists.txt  package.xml
src/chapter04/src/: k_nearest_neighbor_search.cpp  neighbors_within_radius_search.cpp  neighbors_within_voxel_search.cpp  pcl_visual.cpp
src/chapter05/: CMakeLists.txt  package.xml
src/chapter05/src/: random_sample_consensus_1.cpp  random_sample_consensus_2.cpp
src/chapter06/: CMakeLists.txt  README.md  package.xml
src/chapter06/src/: range_image_border_extraction.cpp  range_image_creation.cpp
src/chapter07/: CMakeLists.txt  package.xml
src/chapter08/: CMakeLists.txt  package.xml
src/chapter08/src/: openni_grabber.cpp  read_pcd.cpp  write_pcd.cpp
src/chapter09/: CMakeLists.txt  package.xml
src/chapter09/src/2VoxelGrid滤波器对点云进行下采样/: voxel_grid.cpp
src/chapter09/src/3滤波器移除离群点/: statistical_removal.cpp
src/chapter09/src/4使用参数化模型投影点云/: project_inliers.cpp
src/chapter09/src/5从一个点云中提取索引/: extract_indices.cpp
src/chapter09/src/7双边滤波/: bilateral_filter.cpp
src/chapter10/: CMakeLists.txt  README.md  package.xml
src/chapter10/src/1估计整个点云表面法向量/: normal_estimation.cpp
src/chapter10/src/2估计点云子集的表面法线(error)/: normal_estimation_subdset_points.cpp  table_cloud_normals.pcd
src/chapter10/src/3使用积分图进行法线估计/: normal_estimation_using_integral_images.cpp
src/chapter10/src/4点特征直方图（PFH）描述子/: PFH.cpp  PFH1.cpp
src/chapter10/src/5快速点特征直方图(FPFH)描述子/: FPFH.cpp
src/chapter10/src/6从一个深度图像（range image）中提取NARF特征/: narf_feature_extraction.cpp
src/chapter10/src/7关于矩的使用/: feature_extractor_getOBB.cpp
src/chapter11/: CMakeLists.txt  README.md  package.xml
src/chapter11/src/1基于多项式重构的平滑和法线估计/: resampling.cpp
src/chapter11/src/2在平面模型上提取凸（凹）多边形/: hull_2d.cpp
src/chapter11/src/3无序点云的快速三角化/: greedy_projection.cpp
src/chapter12/: CMakeLists.txt  package.xml
src/chapter12/src/1planar_segmentation/: planar_segmentation.cpp
src/chapter12/src/2cylinder_segmentation/: cylinder_segmentation.cpp
src/chapter12/src/3欧式聚类提取/: cluster_extraction.cpp
src/chapter13/: CMakeLists.txt  README.md  package.xml
src/chapter13/src/1基于对应分组的三维物体识别/: correspondence_grouping.cpp
src/chapter13/src/2隐式形状模型 ISM (Implicit Shape Model)/: implicit_shape_model.cpp
src/chapter13/src/33D物体识别的假设检验/: global_hypothesis_verification.cpp
src/chapter14/: CMakeLists.txt  package.xml
src/chapter14/src/2如何逐步匹配多幅点云/: pairwise_incremental_registration.cpp
src/chapter14/src/3配准之交互式ICP/: interactive_icp.cpp
